<resources>
    <string name="app_name">Campus</string>
    <string name="title_activity_main_menu">main_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message</string>
    <string name="this_is_a_message">This is a message!</string>
    <string name="date">March 1, 2021</string>
    <string name="time">12:00 PM</string>

    <!--feeds testing strings-->
    <string name="sender_name">Home Work</string>
    <string name="desig_name">Group Leader</string>
    <string name="text">Contrary to popular belief,
        Lorem Ipsum is not simply random text.
        It has roots in a piece of classical Latin
        literature from 45 BC, making it over 2000 years old.
    </string>

    <!--added testing strings for add feeds activity-->
    <string name="welcome">Welcome!</string>
    <string name="upload">UPLOAD</string>
    <string name="new_feed">What\'s coming up ?</string>
    <string name="add_feed_from">from</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="club">Club</string>
    <string name="club_name">Club Name</string>
    <string name="admin_s_roll_number">Admin\'s Roll Number</string>
    <string name="year">Year</string>
    <string name="batch">Batch</string>
    <string name="roll_no">Roll No.</string>
    <string name="add">Add</string>
    <string name="club_logo">Add Club Logo</string>

    <array name="clubs">
        <item>AASF</item>
        <item>UTHAAN</item>
        <item>ROTARACT</item>
    </array>
</resources>