<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginVertical="5dp"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <RelativeLayout
        android:id="@+id/date_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/gray_light">

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="10dp"
                android:textColor="@color/gray"
                android:text="@string/date"/>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/message_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/gray_dark"
        app:cardCornerRadius="10sp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/gray_dark"
        android:layout_below="@id/date_relative_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/message_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:textColor="?attr/colorOnPrimary"
                android:linksClickable="true"
                android:autoLink="all"
                android:textColorLink="@color/blue"
                android:textSize="15sp"
                android:text="@string/this_is_a_message"/>

            <TextView
                android:id="@+id/time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="end"
                android:textColor="@color/gray_light"
                android:textSize="12sp"
                android:text="@string/time"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>