<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.AddFeed">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/add_feed_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <EditText
                android:id="@+id/new_feed_text_view"
                android:layout_width="339dp"
                android:layout_height="68dp"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/new_feed"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/list_club_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.04" />

            <Spinner
                android:id="@+id/list_club_spinner"
                android:layout_width="250dp"
                android:layout_height="42dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/new_feed_text_view" />

            <TextView
                android:id="@+id/spinner_text_view"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="clip_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/add_feed_from"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/list_club_spinner"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/new_feed_text_view"
                app:layout_constraintTop_toBottomOf="@+id/new_feed_text_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>